fix navbar jump issue, fix margins for main pages

--- a/Conent/css/output.css
+++ b/Conent/css/output.css
@@ -139,8 +139,7 @@ form {
   align-content: center; }
 
 .main-content {
-  margin-top: 200px;
-  height: 80%;
+  height: 1500px;
   background-color: rgba(48, 2, 2, 0.8);
   width: 60%;
   opacity: 1;
@@ -148,8 +147,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
-  margin-bottom: 200px; }
+  padding: 30px; }
 
 .renderBody {
   display: flex;
