--- a/Content/css/partials/_main-page.scss
+++ b/Content/css/partials/_main-page.scss
@@ -18,6 +18,7 @@
 }
 
 .main-content {
+  margin-top: 200px;
   height: 80%;
   background-color: rgba(48, 2,2 , 0.8 );
   width: 60%;
@@ -27,6 +28,7 @@
   flex-direction: column;
   align-items: center;
   padding: 30px;
+  margin-bottom: 200px;
 }
 
 .renderBody {
