--- a/Content/css/partials/_navbar.scss
+++ b/Content/css/partials/_navbar.scss
@@ -3,15 +3,17 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  position: relative;
 
   .nav-bar  {
     width: 100%;
     height: 50px;
-    margin-top: -250px;
     background-color: rgba(0, 0, 0 , 0.5 );
     border: 1px solid #E9E1CB;
     display: flex;
     align-items: center;
+    position: fixed;
+    bottom: 1100px;
   }
 }
 
